# Fluorine-Manager

./: CMakeLists.txt  README.md
docker/: build-inner.sh
flatpak/: com.fluorine.manager.yml  flatpak-install.sh
libs/: winreg.py
libs/basic_games/: basic_game.py  epic_utils.py  gog_utils.py  steam_utils.py  winreg.py
libs/basic_games/games/: game_baldursgate3.py  game_oblivion_remaster.py
libs/installer_fomod/src/: fomodinstallerdialog.cpp  (+2 more)
libs/installer_fomod_plus/: CMakeLists.txt
libs/installer_fomod_plus/installer/: CMakeLists.txt  FomodPlusInstaller.cpp  FomodPlusInstaller.h
libs/installer_fomod_plus/installer/lib/: CrashHandler.cpp
libs/installer_fomod_plus/installer/ui/: ScaleLabel.cpp  UIHelper.h
libs/installer_fomod_plus/patchwizard/: CMakeLists.txt
libs/installer_fomod_plus/patchwizard/lib/: PatchFinder.h
libs/installer_fomod_plus/scanner/: CMakeLists.txt  FomodPlusScanner.cpp
libs/installer_fomod_plus/share/xml/: FomodInfoFile.cpp  ModuleConfiguration.cpp
libs/nak/: Cargo.toml
libs/nak_ffi/: Cargo.toml
src/plugins/: installer_omod.py  rootbuilder.py
src/src/: createinstancedialog.cpp  createinstancedialog.ui  createinstancedialogpages.cpp  filedialogmemory.cpp  fuseconnector.cpp  fuseconnector.h  instancemanager.cpp  instancemanager.h  instancemanagerdialog.cpp  instancemanagerdialog.h  instancemanagerdialog.ui  loglist.cpp  main.cpp  moapplication.cpp  modinfo.cpp  nxmhandler_linux.cpp  nxmhandler_linux.h  organizercore.cpp  plugincontainer.cpp  plugincontainer.h  processrunner.cpp  profile.cpp  protonlauncher.cpp  settings.cpp  settings.h  settingsdialog.ui  settingsdialogpaths.cpp  settingsdialogproton.cpp  settingsdialogproton.h  wineprefix.cpp  wineprefix.h
(+27 files in other folders)
